2010-01-08  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs, KnownTypeCollection.cs : differentiate
	  [DataContract(Namespace=null)] and [DataContract(Namespace="")].
	  Fixed bug #568763.

2009-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* DataContractSerializer.cs: Add two missing methods for FX3.0 
	and SL2/SL3.

2009-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs : partly revert previous sorting fix in
	  Sep.28th. Do not sort and mix members in base and derived types.
	  Fixed bug #546238.

2009-10-21  Jb Evain  <jbevain@novell.com>

	* SerializationMap.cs, KnownTypeCollection.cs: avoid using LINQ
	on arrays as MonoTouch has issues with them.

2009-09-28  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs :
	  There were some places that ignored possible whitespace nodes.
	  Fixed sorting of ordered members so that it does not give
	  incomplete sorting among base/derived types. (should fix #539563.)
	  Give xml error details in some places.

2009-09-28  Atsushi Enomoto  <atsushi@ximian.com>

	* KnownTypeCollection.cs : (the previous one didn't fix #539563.)
	  Consider attempts to register the same collection type as it did
	  before.

2009-09-28  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs, KnownTypeCollection.cs : nested use of type
	  in its members resulted in infinite loop. This hopefully fixes
	  bug #539563.

2009-09-07  Atsushi Enomoto  <atsushi@ximian.com>

	* IgnoreDataMemberAttribute.cs : add missing type.
	* SerializationMap.cs : support above.

2009-07-23  Sebastien Pouliot  <sebastien@ximian.com>

	* SerializationMap.cs : Ensure Dictionary is still deserialized
	correctly (wrt previous change). Fix moonlight isolated storage
	settings.

2009-07-22  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs : for empty element, do not try to consume
	  children. Fixed bug #524086.
	  For enum, it is always error when the enum is not flags, and