@@ -1,3 +1,8 @@
+2010-01-25  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* SerializationMap.cs : allow readonly field as data member.
+	  Fixed bug #560155.
+
 2010-01-08  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* SerializationMap.cs, KnownTypeCollection.cs : differentiate
